# agent-serch

./: .gitignore  README.md  gpt_agent.py  main.py  pyproject.toml  retrieve.py
agent_search/: __init__.py  __main__.py  cli.py  config.py  engine.py  legacy_agent.py  models.py  reporting.py  scheduler.py  tools.py  utils.py
agent_search/backtest/: engine.py
agent_search/connectors/: __init__.py  akshare_connector.py  announcement_connector.py  serper_connector.py  wecom_connector.py
agent_search/storage/: sqlite_store.py
agent_search/strategy/: __init__.py  factors.py  risk.py  signal.py
config/: config.yaml  watchlist.csv
tests/: test_akshare_connector.py  test_risk.py  test_run_once_integration.py  test_serper_connector.py  test_signal.py  test_wecom_retry.py
