[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-search"
version = "0.2.0"
authors = [
    {name = "akawincent"},
    {name = "oz-agent"}
]
description = "A-share trading research agent with AkShare + Serper + signal/risk/backtest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.24.0",
    "requests>=2.32.5",
    "pydantic>=2.8.2",
    "PyYAML>=6.0.2",
    "akshare>=1.16.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[project.scripts]
agent-search = "agent_search.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_search*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
